--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -157,13 +157,15 @@
         }
       },
       setNavigableRoute(route, params = {}) {
-        if (route && typeof route === 'string') {
+        if (route !== false && route && typeof route === 'string') {
           if (params && typeof params === 'object') {
             this.set({ navigableRoute: {
               routeBack: route, paramsBack: params } });
           } else {
             this.set({ navigableRoute: { routeBack: route } });
           }
+        } else {
+          this.resetRoute();
         }
       },
       resetRoute() {
@@ -296,10 +298,7 @@
          * If a shortcut element was found.
          * If 'enter' was clicked, check if the shortcut element isn't already focused
          */
-        if (
-          shortcutEl && shortcutEl === e.target &&
-          (keyName !== 'enter' || document.activeElement !== shortcutEl)
-        ) {
+        if (keyName !== 'enter' || document.activeElement !== shortcutEl) {
           /**
            * Adapted from:
            * https://stackoverflow.com/questions/15739263/phantomjs-click-an-element
