--- a/packages/components/Brands/example/Example.html
+++ b/packages/components/Brands/example/Example.html
@@ -1,24 +1,29 @@
 <Container>
   <Brands icon='alelo'/>
   <Brands icon='amex'/>
-  <Brands icon='blank'/>
   <Brands icon='cabal'/>
-  <Brands icon='coopercard'/>
-  <Brands icon='dinersclub'/>
+  <Brands icon='diners'/>
   <Brands icon='elo'/>
-  <Brands icon='greencard'/>
-  <Brands icon='hiper'/>
   <Brands icon='hipercard'/>
   <Brands icon='mastercard'/>
   <Brands icon='senff'/>
   <Brands icon='sodexo'/>
   <Brands icon='ticket'/>
-  <Brands icon='up'/>
   <Brands icon='verdecard'/>
-  <Brands icon='verocard'/>
   <Brands icon='visa'/>
   <Brands icon='vr'/>
-
+  <Brands icon='hiper'/>
+  <Brands icon='greencard'/>
+  <Brands icon='cooper'/>
+  <Brands icon='valecard'/>
+  <Brands icon='verocard'/>
+  <Brands icon='up brasil'/>
+  <Brands icon='ben visa vale'/>
+  <Brands icon='redecompras'/>
+  <Brands icon='unionpay'/>
+  <Brands icon='banescard'/>
+  <Brands icon='sorocred'/>
+  <Brands icon='blank'/>
 </Container>
 
 <script>
