refactor: 💡 add deprecation warnings

--- a/packages/components/Brands/Brands.html
+++ b/packages/components/Brands/Brands.html
@@ -3,6 +3,18 @@
 <script>
   import getBrand from './getBrand.js';
 
+  // { deprecated str : replace str }
+  const deprecates = {
+    up: 'up brasil',
+    dinersclub: 'diners',
+    coopercard: 'cooper',
+    benvisavale: 'ben visa vale',
+  };
+  const shouldDeprecate = icon => {
+    const repl = deprecates[icon];
+    if(repl) console.warn(`Icon "${icon}" is deprecated. Use "${repl}"`);
+  };
+
   export default {
     data() {
       return {
@@ -11,6 +23,7 @@
     },
     computed: {
       brand({ icon }) {
+        shouldDeprecate(icon);
         return getBrand(icon);
       },
     },
