docs: ✏️ fix example dialog

--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -6,13 +6,13 @@
     </button>
   </div>
 
-  <dialog
+  <Dialog
     ref:defaultDialog
     on:open="console.log('on:open')"
     on:close="console.log('on:close')"
   >
     Dialog Padrão
-  </dialog>
+  </Dialog>
 
   <h4>Com Promise</h4>
   <div class="row">
