--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -16,7 +16,7 @@
 <script>
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import { hasActiveHandlerFor } from './includes/KeystrokeRegister.js';
+  import { hasActiveHandlerFor, hasKeystrokeToPrevent } from './includes/KeystrokeRegister.js';
 
   /** Return if a certain shortcut key is valid */
   const isEditableInputOnFocus = () => {
@@ -298,7 +298,7 @@
          * If a shortcut element was found.
          * If 'enter' was clicked, check if the shortcut element isn't already focused
          */
-        if (keyName !== 'enter' || document.activeElement !== shortcutEl) {
+        if (!hasKeystrokeToPrevent() && (keyName !== 'enter' || document.activeElement !== shortcutEl)) {
           /**
            * Adapted from:
            * https://stackoverflow.com/questions/15739263/phantomjs-click-an-element
