--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -4,6 +4,7 @@
   bind:isOpen
   on:open
   on:close
+  on:keyup|capture="keyHandler(event)"
 >
   <slot></slot>
   <div slot="extra">
@@ -15,7 +16,6 @@
               class="action negative"
               style={_negativeLabelStyle}
               on:click="close('negative')"
-              shortcut="close"
             >
               {negativeLabel}
             </button>
@@ -32,7 +32,6 @@
               class="action positive"
               style={_positiveLabelStyle}
               on:click="close('positive')"
-              shortcut="enter"
             >
               {positiveLabel}
             </button>
@@ -82,6 +81,21 @@
       },
     },
     methods: {
+      keyHandler(e) {
+        if(!this.get().isOpen) return;
+
+        const { key } = e;
+        const isClose = key === 'close';
+        const isEnter = key === 'enter';
+
+        if (isClose || isEnter) {
+          e.stopImmediatePropagation();
+          e.preventDefault();
+
+          if(isEnter) this.close('positive');
+          if(isClose) this.close('negative');
+        }
+      },
       open() {
         return this.refs.dialog.open();
       },
