--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -1,8 +1,12 @@
 {#if isOpen}
   <div
+    ref:_dialog
     class="dialog"
     class:is-fullscreen="fullscreen"
     {style}
+    tabindex="-1"
+    data-freeze-keystrokes="true"
+    on:keyup
   >
     <div class="content -align-{align}">
       <div class="message">
@@ -51,9 +55,14 @@
       }
     },
     onupdate({ changed, current, previous }) {
+
       /* istanbul ignore next */
       if (changed.isOpen) {
-        if (current.isOpen) {
+        const { isOpen } = current;
+        const { _dialog } = this.refs;
+        if(this.root.meta) this.root.meta.setShortcuts(!isOpen);
+
+        if (isOpen) {
           dialogsOpened++;
           this.fire('open');
 
@@ -62,6 +71,9 @@
            * ! This may not work properly if a <Input/> has forcefocus={true}
            */
           document.activeElement.blur();
+
+          // Force a div focus with tabindex="-1" to prevent Keystroke actions in App.html method checker
+          if(_dialog) _dialog.focus();
 
           if (dialogsOpened === 1 && this.root.meta) {
             const { scrollable, navigable } = this.root.meta.get();
@@ -77,6 +89,7 @@
             this.root.meta.setNavigable(false);
           }
         } else if (previous) {
+          if(_dialog) _dialog.blur();
           this._close();
           dialogsOpened--;
           this.fire('close');
