--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -16,6 +16,7 @@
               class="action negative"
               style={_negativeLabelStyle}
               on:click="close('negative')"
+              shortcut="close"
             >
               {negativeLabel}
             </button>
@@ -32,6 +33,7 @@
               class="action positive"
               style={_positiveLabelStyle}
               on:click="close('positive')"
+              shortcut="enter"
             >
               {positiveLabel}
             </button>
