--- a/packages/components/Dialog/Popup.html
+++ b/packages/components/Dialog/Popup.html
@@ -21,6 +21,8 @@
   /** Previous navigable (app meta) object */
   let previousNavigable = null;
 
+  let lastShortcutsState = undefined;
+
   export default {
     components: {
       Icon: '@mamba/icon',
@@ -42,7 +44,15 @@
       if (changed.isOpen) {
         const { isOpen } = current;
         const { _popup } = this.refs;
-        if(this.root.meta) this.root.meta.setShortcuts(!isOpen);
+
+        if(this.root.meta) {
+          if(isOpen) {
+            lastShortcutsState = this.root.meta.get().shortcuts;
+            this.root.meta.setShortcuts(true);
+          } else if(lastShortcutsState != undefined) {
+            this.root.meta.setShortcuts(lastShortcutsState);
+          }
+        }
 
         if (isOpen) {
           dialogsOpened++;
