--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -239,8 +239,10 @@
         const keyName = Keyboard.getKeyName(keyCode);
 
 
-        if ((e.defaultPrevented || hasActiveHandlerFor(keyName)) || notPrevent) {
-          return;
+        if(handlerContext === document) {
+          if (e.defaultPrevented || hasActiveHandlerFor(keyName)) {
+            return;
+          }
         }
 
         const { shortcuts: shortcutsEnabled } = this.get();
@@ -260,8 +262,9 @@
           }
         }
 
+
         /** If the key is not mapped or a input is focused, do nothing */
-        if (isEditableInputOnFocus()) {
+        if (isEditableInputOnFocus(e.target)) {
           return;
         }
 
