--- a/packages/components/Carousel/CarouselNavigation.html
+++ b/packages/components/Carousel/CarouselNavigation.html
@@ -13,16 +13,17 @@
     <button class="prev" {style} on:click="_previousSlide()">
       <Icon symbol="chevron-left" color="{navColor}" />
     </button>
-      <div class="dots">
+    <div class="dots">
       {#each Array(slides.length) as dots, index}
-        <div  style="background-color: {count === index ? navBg : '#E1DFDF'};"></div>
+      <div
+        style="background-color: {count === index ? navBg : '#E1DFDF'};"
+      ></div>
       {/each}
     </div>
     <button class="next" {style} on:click="_nextSlide()">
       <Icon symbol="chevron-right" color="{navColor}" />
     </button>
   </div>
-
 </div>
 
 <script>
@@ -50,13 +51,19 @@
         return `background-color: ${navBg}`;
       },
     },
+    onupdate({ changed, current }) {
+      const { count: position } = current;
+      if (changed.count) {
+        this.fire('getPosition', { position });
+      }
+    },
     methods: {
       _previousSlide() {
         const { slides, infinity } = this.get();
         let { count } = this.get();
 
         if (count === 0) {
-          if(infinity){
+          if (infinity) {
             this.set({ count: slides.length - 1 });
           }
         } else {
@@ -69,7 +76,7 @@
         let { count } = this.get();
 
         if (count >= slides.length - 1) {
-          if(infinity){
+          if (infinity) {
             this.set({ count: 0 });
           } else {
             this.fire('finish');
@@ -79,7 +86,6 @@
           this.set({ count: newCount });
         }
       },
-
     },
   };
 </script>
@@ -97,17 +103,15 @@
 
       .dots {
         display: flex;
-        margin: 0 11px;
-        flex: 1;
+        margin: 0 5px;
         flex-wrap: wrap;
-        align-items: center;
 
         div {
           background: #e1dfdf;
           margin: 2px;
-          width: 15px;
-          height: 3px;
-          border-radius: 5px;
+          width: 14px;
+          height: 4px;
+          border-radius: 6px;
         }
       }
     }
