feat: 🎸 Update back function

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -118,7 +118,7 @@
         }
       },
       _goBack() {
-        const { _navigableRoute } = this.get();
+        const { _navigableRoute, doBeforeClose } = this.get();
         /* istanbul ignore else */
         if (_navigableRoute.routeBack) {
           console.log(_navigableRoute.routeBack);
@@ -132,6 +132,10 @@
           }
         } else if (this.root.router) {
           this.root.fire('appbar:goBack');
+          // Usando doBeforeClose como true, você consegue fazer ações antes de fechar o app
+          // Usando o evento appbar:goBack, seja para validação
+          // ou seja para salvar dados ao clicar no botão back
+          if (doBeforeClose) return;
           this.root.router.back();
         }
       },
