--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -28,7 +28,6 @@
         bgColor: '#f2f2f2',
         border: true,
         _hideAppBar: false,
-        doBeforeClose: false,
       };
     },
     computed: {
@@ -43,7 +42,7 @@
       },
       _isAtHome: ({ _location }) => _location === '/' || !_location,
       _showBack: ({ _isAtHome, _isNavigationEnabled }) =>
-        !_isAtHome && _isNavigationEnabled.back,
+      !_isAtHome && _isNavigationEnabled.back,
       _showHome: ({ _isNavigationEnabled }) => _isNavigationEnabled.home,
     },
     oncreate() {
@@ -96,29 +95,21 @@
     },
     methods: {
       _goHome() {
-        const { _isAtHome, doBeforeClose } = this.get();
+        const { _isAtHome } = this.get();
 
         if (_isAtHome) {
           this.root.fire('appbar:closeApp');
-          // Usando doBeforeClose como true, você consegue fazer ações antes de fechar o app
-          // Usando o evento appbar:closeApp, seja para validação
-          // ou seja para salvar dados ao clicar no botão de home
-          if (doBeforeClose) return;
           return this.root.close();
         }
 
         /* istanbul ignore else */
         if (this.root.router) {
           this.root.fire('appbar:goHome');
-          // Usando doBeforeClose como true, você consegue fazer ações antes de fechar o app
-          // Usando o evento appbar:goHome, seja para validação
-          // ou seja para salvar dados ao clicar no botão de home
-          if (doBeforeClose) return;
           this.root.router.go('/');
         }
       },
       _goBack() {
-        const { _navigableRoute, doBeforeClose } = this.get();
+        const { _navigableRoute } = this.get();
         /* istanbul ignore else */
         if (_navigableRoute.routeBack) {
           console.log(_navigableRoute.routeBack);
@@ -132,10 +123,6 @@
           }
         } else if (this.root.router) {
           this.root.fire('appbar:goBack');
-          // Usando doBeforeClose como true, você consegue fazer ações antes de fechar o app
-          // Usando o evento appbar:goBack, seja para validação
-          // ou seja para salvar dados ao clicar no botão back
-          if (doBeforeClose) return;
           this.root.router.back();
         }
       },
