--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -30,7 +30,7 @@
         </p>
       {:elseif showNoPaperErrorMessage}
         <p class="failure-dialog-txt">
-          Verifique a impressora e tente novamente.
+          Verifique a impressora e<br />tente novamente.
         </p>
       {/if}
   </Dialog>
@@ -159,6 +159,8 @@
   .failure-dialog-txt {
     font-size: 16px;
     line-height: 21px;
+    text-align: center;
+    color: #353535;
   }
 
   .content {
@@ -193,4 +195,5 @@
       background-position-x: 0;
     }
   }
+
 </style>
