--- a/packages/components/Button/Button.html
+++ b/packages/components/Button/Button.html
@@ -112,7 +112,7 @@
 
     &[disabled] {
       cursor: not-allowed;
-      opacity: 0.5;
+      background-color: #abdba4;
     }
 
     &.at-bottom {
