--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -430,6 +430,7 @@
     /* border-top: 2px solid; */
     padding-top: 5px;
     font-size: 12px;
+    padding-bottom: 5px;
   }
 
   .wrapper-input {
